--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "develop": "strapi develop",
     "start": "strapi develop",
     "build": "strapi build",
-    "strapi": "strapi",
-    "postinstall": "patch-package",
-    "heroku-postbuild": "patch-package"
+    "strapi": "strapi","heroku-cleanup": "yarn patch-package"
+
   },
   "devDependencies": {},
   "dependencies": {
